fix: remove -1px dropdown offset that made it 2px too wide

--- a/src/components.css
+++ b/src/components.css
@@ -55,8 +55,8 @@
 .dropdown {
   position: absolute;
   top: 100%;
-  left: -1px;
-  right: -1px;
+  left: 0;
+  right: 0;
   z-index: 2;
   background: var(--color-bg-raised);
   border: var(--border-subtle);
